# raw-opengl-loader

./: CMakeLists.txt  LICENSE  Makefile  README.md  build.bat  clean.bat  compile_commands.json  debug.bat
assets/shaders/: base.frag  base.vert
src/: error.h  logging.h  main.c  opengl_loader.c  opengl_loader.h  window.c  window.h
src/app/: app.c
src/core/file_utils/: file_utils.c  file_utils.h
src/core/math/: custom_math.c  custom_math.h  matrices.h  matricies.c  radians.h  vectors.c  vectors.h
src/core/opengl_loader/: opengl_enums.h  opengl_function_ptrs.h  opengl_functions.inc  opengl_loader.c  opengl_loader.h  opengl_types.h
src/core/utils/: string_compare.c  string_compare.h
src/core/window/: time.c  time.h  window.c  window.h
src/example_app/: resource_manager.c  resource_manager.h
src/example_app/app/: app.c  app.h
src/example_app/renderer/: mesh.c  mesh.h  shader.c  shader.h
src/example_app/scene/: camera.c  camera.h  model.c  model.h
src/opengl_loader/: opengl_enums.h  opengl_loader.c  opengl_loader.h  opengl_types.h
src/renderer/: mesh.c  mesh.h  shader.c  shader.h
